--- a/commands/miscellaneous/saspont.html
+++ b/commands/miscellaneous/saspont.html
@@ -354,6 +354,30 @@
                             </ul>
                         </li>
                         <li>
+                            <p class="param"><b>Casino</b>: Sokszorozd meg sasPontjaidat!</p>
+                            <ul>
+                                <li class="subcommand">
+                                    <p class="param"><b>Coinflip</b>: Fej vagy írás? Duplázd meg a tétedet ennek eltalálásával!</p>
+                                    <ul>
+                                        <li>
+                                            <p class="param"><code>tét (szám)</code>: Mennyi sasPonttal játszol? | <b>Kötelező</b></p>
+                                        </li>
+                                        <li>
+                                            <p class="param"><code>oldal (választás)</code>: Mire fogadsz? | <b>Kötelező</b></p>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="subcommand">
+                                    <p class="param"><b>Crash</b>: Kiszállsz vagy maradsz nagyobb szorzó reményében?</p>
+                                    <ul>
+                                        <li>
+                                            <p class="param"><code>tét (szám)</code>: Mennyi sasPonttal játszol? | <b>Kötelező</b></p>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
                             <p class="param"><b>Ranglista</b>: Legjobb 10 sasPont gyűjtő megjelenítése</p>
                             <ul>
                                 <li class="subcommand">
@@ -363,6 +387,9 @@
                                     <p class="param"><b>Szerver</b>: Szerver ranglistájának megjelenítése</p>
                                 </li>
                             </ul>
+                        </li>
+                        <li class="subcommand">
+                            <p class="param"><b>Súgó</b>: Súgó a sasPont-rendszer működéséhez</p>
                         </li>
                     </ul>
                 </div>
