--- a/commands/miscellaneous/saspont.html
+++ b/commands/miscellaneous/saspont.html
@@ -337,7 +337,7 @@
                 <div class="col-10 col-sm-10 col-md-8 col-lg-7 col-xl-5 mb-4 pt-3 pb-4 tabcontent command-info anim">
                     <h3 class="command">Leírás</h3>
                     <hr>
-                    <p>Nézd meg a saját vagy kiválasztott tag sasPont adatait, vagy a globális/szerver ranglistát</p>
+                    <p>Nézd meg a saját vagy kiválasztott tag sasPont adatait, a globális/szerver ranglistát, vagy lépj be a kaszinóba</p>
                 </div>
             </div>
             <div class="row justify-content-center">
