--- a/index.html
+++ b/index.html
@@ -51,274 +51,42 @@
                 <div class="accordion" id="moderation">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-mod" aria-expanded="false" aria-controls="flush-mod">
-                                Moderáció - 15
-                            </button>
+                            <button class="accordion-button collapsed" id="button-mod" type="button" data-bs-toggle="collapse" data-bs-target="#flush-mod" aria-expanded="false" aria-controls="flush-mod"></button>
                         </h2>
                         <div id="flush-mod" class="accordion-collapse collapse">
-                            <div class="accordion-body">
-                                <ul>
-                                    <li>
-                                        <a href="commands/moderation/ban.html">Ban</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/bans.html">Bans</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/clear.html">Clear</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/kick.html">Kick</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/kicks.html">Kicks</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/lockdown.html">Lockdown</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/moderations.html">Moderations</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/removetimeout.html">Removetimeout</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/slowmode.html">Slowmode</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/timeout.html">Timeout</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/timeouts.html">Timeouts</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/unban.html">Unban</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/unlockdown.html">Unlockdown</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/warn.html">Warn</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/moderation/warns.html">Warns</a>
-                                    </li>
-                                </ul>
-                            </div>
+                            <div class="accordion-body"></div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-music" aria-expanded="false" aria-controls="flush-music">
-                                Zenelejátszás - 18
-                            </button>
+                            <button class="accordion-button collapsed" id="button-music" type="button" data-bs-toggle="collapse" data-bs-target="#flush-music" aria-expanded="false" aria-controls="flush-music"></button>
                         </h2>
                         <div id="flush-music" class="accordion-collapse collapse">
-                            <div class="accordion-body">
-                                <ul>
-                                    <li>
-                                        <a href="commands/music/autoplay.html">Autoplay</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/clearqueue.html">Clearqueue</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/filter.html">Filter</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/loop.html">Loop</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/lyrics.html">Lyrics</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/most.html">Most</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/pause.html">Pause</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/play.html">Play</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/previous.html">Previous</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/queue.html">Queue</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/remove.html">Remove</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/restart.html">Restart</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/resume.html">Resume</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/seek.html">Seek</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/shuffle.html">Shuffle</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/skip.html">Skip</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/stop.html">Stop</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/music/volume.html">Volume</a>
-                                    </li>
-                                </ul>
-                            </div>
+                            <div class="accordion-body"></div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-config" aria-expanded="false" aria-controls="flush-config">
-                                Konfiguráció - 12
-                            </button>
+                            <button class="accordion-button collapsed" id="button-config" type="button" data-bs-toggle="collapse" data-bs-target="#flush-config" aria-expanded="false" aria-controls="flush-config"></button>
                         </h2>
                         <div id="flush-config" class="accordion-collapse collapse">
-                            <div class="accordion-body">
-                                <ul>
-                                    <li>
-                                        <a href="commands/configuration/autoroles.html">Autoroles</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/configuration/customcommand.html">Customcommand</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/configuration/djrole.html">Djrole</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/configuration/farewell.html">Farewell</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/configuration/membercounter.html">Membercounter</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/configuration/modconfig.html">Modconfig</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/configuration/permissions.html">Permissions</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/configuration/saveroles.html">Saveroles</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/configuration/serversettings.html">Serversettings</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/configuration/toggle.html">Toggle</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/configuration/welcome.html">Welcome</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/configuration/zenecsatorna.html">Zenecsatorna</a>
-                                    </li>
-                                </ul>
-                            </div>
+                            <div class="accordion-body"></div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-misc" aria-expanded="false" aria-controls="flush-misc">
-                                Sokszínű - 19
-                            </button>
+                            <button class="accordion-button collapsed" id="button-misc" type="button" data-bs-toggle="collapse" data-bs-target="#flush-misc" aria-expanded="true" aria-controls="flush-misc"></button>
                         </h2>
                         <div id="flush-misc" class="accordion-collapse collapse">
-                            <div class="accordion-body">
-                                <ul>
-                                    <li>
-                                        <a href="commands/miscellaneous/8ball.html">8ball</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/ascii.html">Ascii</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/avatár.html">Avatár</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/coinflip.html">Coinflip</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/echo.html">Echo</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/emojify.html">Emojify</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/kőpapírolló.html">Kőpapírolló</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/miatyánk.html">Miatyánk</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/nekosbest.html">Nekosbest</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/nem.html">Nem</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/ötbetű.html">Ötbetű</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/randomszám.html">Randomszám</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/replace.html">Replace</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/sadstory.html">Sadstory</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/saspont.html">Saspont</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/serverinfo.html">Serverinfo</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/szóharc.html">Szóharc</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/szókeresés.html">Szókeresés</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/miscellaneous/userinfo.html">Userinfo</a>
-                                    </li>
-                                </ul>
-                            </div>
+                            <div class="accordion-body"></div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-info" aria-expanded="false" aria-controls="flush-info">
-                                Információ - 5
-                            </button>
+                            <button class="accordion-button collapsed" id="button-info" type="button" data-bs-toggle="collapse" data-bs-target="#flush-info" aria-expanded="false" aria-controls="flush-info"></button>
                         </h2>
                         <div id="flush-info" class="accordion-collapse collapse">
-                            <div class="accordion-body">
-                                <ul>
-                                    <li>
-                                        <a href="commands/information/changelog.html">Changelog</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/information/feedback.html">Feedback</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/information/help.html">Help</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/information/info.html">Info</a>
-                                    </li>
-                                    <li>
-                                        <a href="commands/information/status.html">Status</a>
-                                    </li>
-                                </ul>
-                            </div>
+                            <div class="accordion-body"></div>
                         </div>
                     </div>
                 </div>
